# realworld

./: .gitignore  Cargo.toml  README.md
migrations/: 20250128103706_create-users-table.sql  20250128113503_create-follows-table.sql  20250128173018_create-tags-table.sql  20250128174341_create-articles-table.sql  20250128174803_create-taglist-table.sql  20250128174923_create-favorites-table.sql  20250206132633_create-comments-table.sql
src/: articles.rs  auth.rs  comments.rs  database.rs  main.rs  profile.rs  tags.rs  token.rs
