[package]
name = "realworld"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = "1.0"
serde_json = "1.0"
jsonwebtoken = { version = "9.3", default-features = false }
